deploy/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vanessa
  labels:
    app.kubernetes.io/part-of: vanessa
    pod-security.kubernetes.io/enforce: restricted
